# aith

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
examples/: file_operations_demo.cpp
include/: api.h  benchmark.h  benchmark_request.h  benchmark_runner.h  config_manager.h  history.h  model_blacklist.h  performance_timer.h  provider_manager.h  string_utils.h  system_utils.h  utils.h
include/benchmark/: benchmark.h  benchmark_config.h  benchmark_reporter.h  benchmark_response.h
include/blacklist/: blacklist_add_operation.h  blacklist_check_operation.h  blacklist_file_manager.h  blacklist_list_operation.h  blacklist_operation_factory.h
include/chat/: history.h  markdown.h  markdown_renderer.h
include/commands/: benchmark_command.h  blacklist_command.h  chat_command.h  command.h  command_factory.h  command_line_parser.h  config_command.h  help_command.h  history_command.h  list_command.h
include/config/: config_template_manager.h  config_wizard.h
include/core/: api_manager.h  application_controller.h  application_setup.h  blacklist_manager.h  blacklist_operation.h  blacklist_parser.h  config_manager.h  model_blacklist.h  provider_manager.h
include/core/blacklist/: blacklist_list_operation.h  blacklist_remove_operation.h
include/http/: api_helpers.h  api_models.h  http_client.h
include/markdown/: terminal_markdown_renderer.h
include/markdown/blocks/: block_handler.h  blockquote_block_handler.h  code_block_handler.h  header_block_handler.h  horizontal_rule_block_handler.h  list_block_handler.h  paragraph_block_handler.h  table_block_handler.h
include/markdown/common/: ansi_colors.h  render_state.h  text_utils.h  word_wrapper.h
include/markdown/factory/: block_handler_factory.h
include/utils/: config_file_handler.h  conversation_displayer.h  directory_operations.h  file_operations.h  file_permissions.h  file_utils.h  filename_generator.h  json_file_handler.h  temp_file_manager.h
src/: api.cpp  api_models.cpp  benchmark.cpp  benchmark_reporter.cpp  benchmark_request.cpp  benchmark_runner.cpp  config_manager.cpp  file_utils.cpp  history.cpp  http_client.cpp  main.cpp  markdown.cpp  model_blacklist.cpp  performance_timer.cpp  provider_manager.cpp  string_utils.cpp  system_utils.cpp  utils.cpp
src/api/: api_helpers.cpp  api_models.cpp
src/benchmark/: benchmark_config.cpp  benchmark_request.cpp  benchmark_response.cpp  benchmark_runner.cpp
src/blacklist/: blacklist_file_manager.cpp  blacklist_list_operation.cpp
src/chat/: history.cpp  markdown.cpp  markdown_renderer.cpp
src/commands/: benchmark_command.cpp  blacklist_command.cpp  chat_command.cpp  command_factory.cpp  command_line_parser.cpp  config_command.cpp  help_command.cpp  history_command.cpp  list_command.cpp
src/config/: config_template_manager.cpp  config_wizard.cpp
src/core/: api_manager.cpp  application_controller.cpp  application_setup.cpp  blacklist_manager.cpp  blacklist_operation.cpp  blacklist_operation_factory.cpp  config_manager.cpp  model_blacklist.cpp  provider_manager.cpp
src/core/blacklist/: blacklist_add_operation.cpp  blacklist_check_operation.cpp  blacklist_operation_factory.cpp  blacklist_parser.cpp  blacklist_remove_operation.cpp
src/http/: api_helpers.cpp  http_client.cpp
src/markdown/: markdown.cpp  terminal_markdown_renderer.cpp
src/markdown/blocks/: blockquote_block_handler.cpp  code_block_handler.cpp  header_block_handler.cpp  horizontal_rule_block_handler.cpp  list_block_handler.cpp  paragraph_block_handler.cpp  table_block_handler.cpp
src/markdown/common/: ansi_colors.cpp  text_utils.cpp  word_wrapper.cpp
src/markdown/factory/: block_handler_factory.cpp
src/utils/: config_file_handler.cpp  conversation_displayer.cpp  directory_operations.cpp  file_operations.cpp  file_permissions.cpp  file_utils.cpp  filename_generator.cpp  json_file_handler.cpp  system_utils.cpp  temp_file_manager.cpp
tests/core/blacklist/: test_blacklist_operations.cpp
